# CrewAI

./: pyproject.toml
.devcontainer/: devcontainer.json
src/research_crew/: crew.py  main.py
src/research_crew/config/: agents.yaml  tasks.yaml
src/research_crew/output/: report.md
src/research_crew/tools/: custom_tool.py
